Add new REST method, refactoring in service and DAO layer, remove redundant Jackson annotations from domain layer classes, add JWT authentication, add REST calls logging